Remove use of deprecated boxed types constructors