@@ -129,7 +129,7 @@ public class SingleCluster implements Comparable<SingleCluster> {
             float stepWidth = (float) pages.size() / MAX_MERGE_PAGES;
             float totalStepped = 0;
             for (int i = 0; i < MAX_MERGE_PAGES; i++) {
-                pagesToMerge.add(pages.get(new Double(Math.floor(totalStepped)).intValue()));
+                pagesToMerge.add(pages.get(Integer.valueOf((int) Math.floor(totalStepped))));
                 totalStepped += stepWidth;
             }
         }
